--- a/网络和数据通信/网络编程.md
+++ b/网络和数据通信/网络编程.md
@@ -56,7 +56,7 @@ c、响应内容实体
   2. 每一条TCP连接只能有两个端点，每一条TCP连接只能是点对点的（一对一）；
   3. TCP提供可靠交付的服务。通过TCP连接传送的数据，无差错，不丢失，不重复，并且按序到达；
   4. TCP提供全双工通信。TCP允许通信双方的应用进程在任何时候都能发送数据。TCP连接的两端都设有发送缓存和接收缓存，用来临时存放双方通信的数据；
-  5. 面向字节流。TCP中的"流"（stream）值的是流入进程或从进程流出的字节序列。"面向字节流"的含义是：虽然应用程序和TCP的交互寺一次一个数据块（大小不等），但TCP把应用程序交下来的数据仅仅看成是一连串的无结构的字节流。
+  5. 面向字节流。TCP中的"流"（stream）指的是流入进程或从进程流出的字节序列。"面向字节流"的含义是：虽然应用程序和TCP的交互是一次一个数据块（大小不等），但TCP把应用程序交下来的数据仅仅看成是一连串的无结构的字节流。
 
 ##### 用户数据协议UDP(User Datagram Protocol) -- 提供无连接的，尽最大努力的数据传输服务（不保证数据传输的可靠性）
 - UDP的主要特点：
@@ -118,7 +118,7 @@ select的轮询机制是系统会去查找每个fd是否数据已准备好，当
 无论是select还是epoll都需要内核把FD消息通知给用户空间，如何避免不必要的内存拷贝就很重要，在这点上，epoll是通过内核于用户空间mmap同一块内存实现的，而select则做了不必要的拷贝
 
 ## MMAP
-https://blog.csdn.net/yusiguyuan/article/details/23388771
+https://blog.csdn.net/yusiguyuan/article/details/23388771  //https://blog.csdn.net/zhangzhebjut/article/details/39100373 
 内存映射，**简而言之就是将用户空间的一段内存区域映射到内核空间**，映射成功后，用户对这段内存区域的修改可以直接反映到内核空间，同样，内核空间对这段区域的修改也直接反映用户空间。那么对于内核空间<---->用户空间两者之间需要大量数据传输等操作的话效率是非常高的。
 
 # epoll中et和lt的区别与实现原理
