复习和完善

--- a/java/设计模式.md
+++ b/java/设计模式.md
@@ -1,6 +1,9 @@
 todo
 https://github.com/Snailclimb/JavaGuide/blob/master/Java%E7%9B%B8%E5%85%B3/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F.md
 
+# java8的模板方法模式
+https://mp.weixin.qq.com/s/zpScSCktFpnSWHWIQem2jg
+
 # 面向对象设计原则
 https://www.cnblogs.com/pony1223/p/7594803.html
 
