--- a/架构和优化/分布式.md
+++ b/架构和优化/分布式.md
@@ -21,7 +21,7 @@ BASE模型包含个三个元素：
 
 # 分布式事务
 https://www.cnblogs.com/savorboard/p/distributed-system-transaction-consistency.html#!comments
- ## 两段提交--2PC
+ ## 两段提交--2PC（又叫做 XA Transactions）
 1. prepare-请求锁-事务
 2. commit-提交事务
  ## 补偿事务 TCC
@@ -36,3 +36,6 @@ https://www.cnblogs.com/savorboard/p/distributed-system-transaction-consistency.
  ## Sagas事务模型
 
 [分布式事务学习](https://blog.csdn.net/qq_27384769/article/details/79302497)
+
+
+- 阿里seata分布式事务(https://seata.io/zh-cn/docs/overview/what-is-seata.html)
