--- a/数据结构和算法/数据结构.md
+++ b/数据结构和算法/数据结构.md
@@ -1,23 +1,23 @@
-- [常见数据结构记录](#%E5%B8%B8%E8%A7%81%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E8%AE%B0%E5%BD%95)
-  - [数组](#%E6%95%B0%E7%BB%84)
-  - [链表-linked list](#%E9%93%BE%E8%A1%A8-linked-list)
-  - [堆-Heap](#%E5%A0%86-heap)
-  - [栈-stack](#%E6%A0%88-stack)
-  - [队列-queue](#%E9%98%9F%E5%88%97-queue)
-  - [hash表](#hash%E8%A1%A8)
-    - [一致性hash算法](#%E4%B8%80%E8%87%B4%E6%80%A7hash%E7%AE%97%E6%B3%95)
-    - [哈希冲突解决办法](#%E5%93%88%E5%B8%8C%E5%86%B2%E7%AA%81%E8%A7%A3%E5%86%B3%E5%8A%9E%E6%B3%95)
-  - [树](#%E6%A0%91)
-    - [二叉树(Binary Tree)](#%E4%BA%8C%E5%8F%89%E6%A0%91binary-tree)
-    - [二叉查找树(Binary Search Tree)](#%E4%BA%8C%E5%8F%89%E6%9F%A5%E6%89%BE%E6%A0%91binary-search-tree)
-    - [平衡二叉树(Balanced Binary Tree)](#%E5%B9%B3%E8%A1%A1%E4%BA%8C%E5%8F%89%E6%A0%91balanced-binary-tree)
-      - [平衡查找树之AVL树](#%E5%B9%B3%E8%A1%A1%E6%9F%A5%E6%89%BE%E6%A0%91%E4%B9%8Bavl%E6%A0%91)
-      - [平衡二叉树之红黑树](#%E5%B9%B3%E8%A1%A1%E4%BA%8C%E5%8F%89%E6%A0%91%E4%B9%8B%E7%BA%A2%E9%BB%91%E6%A0%91)
-    - [B树：平衡多路查找树](#b%E6%A0%91%E5%B9%B3%E8%A1%A1%E5%A4%9A%E8%B7%AF%E6%9F%A5%E6%89%BE%E6%A0%91)
-    - [B+树](#b%E6%A0%91)
-    - [B*树](#b%E6%A0%91)
-    - [字典树（Trie）](#%E5%AD%97%E5%85%B8%E6%A0%91trie)
-- [算法](#%E7%AE%97%E6%B3%95)
+- [常见数据结构记录](#常见数据结构记录)
+  - [数组](#数组)
+  - [链表-linked list](#链表-linked-list)
+  - [堆-Heap](#堆-heap)
+  - [栈-stack](#栈-stack)
+  - [队列-queue](#队列-queue)
+  - [hash表](#hash表)
+    - [一致性hash算法](#一致性hash算法)
+    - [哈希冲突解决办法](#哈希冲突解决办法)
+  - [树](#树)
+    - [二叉树(Binary Tree)](#二叉树binary-tree)
+    - [二叉查找树(Binary Search Tree)](#二叉查找树binary-search-tree)
+    - [平衡二叉树(Balanced Binary Tree)](#平衡二叉树balanced-binary-tree)
+      - [平衡查找树之AVL树](#平衡查找树之avl树)
+      - [平衡二叉树之红黑树](#平衡二叉树之红黑树)
+    - [B树：平衡多路查找树](#b树平衡多路查找树)
+    - [B+树](#b树)
+    - [B*树](#b树-1)
+    - [字典树（Trie）](#字典树trie)
+- [算法](#算法)
 
 # 常见数据结构记录
 * 数据结构：
@@ -66,8 +66,8 @@
 * 哈希地址 
 哈希地址记录的是我们所需要的数据在哈希表中的存储位置，哈希地址只是表示查找表中的存储位置，不是实际的物理存储位置
 ### 一致性hash算法
-不带虚节点hash
-待虚节点hash
+- 不带虚节点hash
+- 带虚节点hash
  https://www.cnblogs.com/lpfuture/p/5796398.html
 
 ### 哈希冲突解决办法
