--- a/数据结构和算法/数据结构和算法阅读记录.md
+++ b/数据结构和算法/数据结构和算法阅读记录.md
@@ -9,7 +9,7 @@
 | 队列 | 提供先进先出(FIFO)方式的存取 | 存取其他项很慢 | 
 | 链表 | 插入快，删除快 | 查找慢 |
 | 二叉树 | 查找，插入，删除都快（如果树保持平衡） | 删除算法复杂 |
-| 红-黑树 | 查找，插入，删除都快。树总是平衡的 | 算法复制 |
+| 红-黑树 | 查找，插入，删除都快。树总是平衡的 | 算法复杂 |
 | 2-3-4树 | 查找，插入，删除都快。树总是平衡的。类似的树对磁盘存储有用 | 算法复制 |
 | 哈希表 | 如果关键字已知则存取极快。插入快 | 删除慢，如果不知道关键字则存取很慢，对存储空间使用不充分 |
 | 堆 | 查找，删除快，对最大数据项的存取很快 | 对其他数据项存取慢 |
@@ -110,7 +110,7 @@ public void bubbleSort() {
   - 环绕式处理
   为了避免队列不满却不能插入新数据项的问题，可以让队头队尾指针绕回到数据开始的位置，这就是循环队列
 
-  - 判断队列是否有环：基于链表实现，“快慢指针”的方法，参考链表部分
+  - 判断队列是否有环：基于链表实现，“快慢指针”的方法来判断是否有环？，参考链表部分
 
 * 双向队列
 
