--- a/java/线程.md
+++ b/java/线程.md
@@ -65,13 +65,22 @@ http://www.cnblogs.com/dolphin0520/p/3920357.html
  * 实现callable接口,通过futuretask包装器创建
  * 使用线程池
 
+- Runnable自 Java 1.0 以来一直存在，但Callable仅在 Java 1.5 中引入,目的就是为了来处理Runnable不支持的用例。Runnable 接口不会返回结果或抛出检查异常，但是 Callable 接口可以。所以，如果任务不需要返回结果或抛出异常推荐使用 Runnable 接口，这样代码看起来会更加简洁。
+
+
 # 2.线程池
 ## 常用线程池
 JDK自定义线程池ThreadPoolExecutor
 JDK定时线程池ScheduledThreadPoolExecutor
 Executors-默认线程池参数
 
+- execute()方法用于提交不需要返回值的任务，所以无法判断任务是否被线程池执行成功与否；
+submit()方法用于提交需要返回值的任务。线程池会返回一个 Future 类型的对象，通过这个 Future 对象可以判断任务是否执行成功，并且可以通过 Future 的 get()方法来获取返回值，get()方法会阻塞当前线程直到任务完成，而使用 get（long timeout，TimeUnit unit）方法的话，如果在 timeout 时间内任务还没有执行完，就会抛出 java.util.concurrent.TimeoutException。
+
 ![线程池处理流程](./pic/线程池处理流程.jpg)
+
+[Java线程池实现原理及其在美团业务中的实践](https://tech.meituan.com/2020/04/02/java-pooling-pratice-in-meituan.html)
+
 ## 参数含义
  1. corePoolSize（线程池的基本大小）
 
