--- a/java/线程.md
+++ b/java/线程.md
@@ -24,6 +24,8 @@ http://www.cnblogs.com/dolphin0520/p/3920357.html
 
   tips：虽然synchronized和JUC里的Lock都是实现锁的功能，但线程进入的状态时不一样的。*synchronized会让线程进入阻塞状态*，而JUC里的Lock时用LockSupport.part()/unpark()来实现阻塞/唤醒的，会让线程进入**等待状态**。
 
+![java阻塞线程的不同姿势](./pic/java阻塞线程的不同姿势.png) --使用白色背景可以查看到文字
+
 
 ## 1.1 线程生命周期（线程状态转换图）
 
